FINALLY bootstrap full width container class.fixed overflow issue with nav covering h1

--- a/style.css
+++ b/style.css
@@ -74,8 +74,8 @@ section {
     padding: 3em;
 }
 
-.container {
-    margin: 7em 2em;
+.container-fluid {
+margin-top: 5em;
 }
 
 h1 {
